# game_of_life

./: .clang-format  CMakeLists.txt  GolWidget.cpp  Grid.cpp  Grid.h  Playground.cpp  Playground.h  main.cpp  readme.md
django/gol_socket/: db.sqlite3  manage.py
django/gol_socket/gol_socket/: asgi.py  settings.py  urls.py  wsgi.py
gol_back/: CMakeLists.txt  Grid.cpp  Playground.cpp  gen_pre_compile.py
gol_back_inc/: Grid.h  Playground.h  VectorGrid.h
gol_py/: CMakeLists.txt  check_all_func.py  gol_py.cpp  gol_py.h
gol_qt/: CMakeLists.txt  GolWidget.cpp  GolWidget.h  main.cpp
